--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,12 @@
+
 <div class="container text-center text-white">
     <h1 class="display-4 mt-5">THE BEST WAY TO GET YOUR FAVORITE MUSIC</h1>
-    <p><a href="/signup" class="btn btn-link text-white">Sign Up for Free →</a></p>
+    <p><a href="/signup" class="btn btn-link text-#4750FF">Sign Up for Free →</a></p>
 
 <form class="d-inline-block mt-4" style="max-width: 800px; width: 100%;">
   <div class="input-group">
     <input type="text" class="form-control" placeholder="Search for your Favorite Songs">
-    <button class="btn btn-primary" type="submit">Search</button>
+    <button class="btn-#4750FF text-white" type="submit">Search</button>
   </div>
 </form>
 
@@ -41,7 +42,7 @@
                     <i class="fas fa-music"></i> <!-- Replace with appropriate icon -->
                 </div>
                 <h5 class="card-title">1000+ Songs</h5>
-                <p class="card-content">Access a library of over 1000 songs from 1960s to now.</p>
+                <p class="card-content">Access a library of over 1000 songs from 1960s to Now.</p>
             </div>
         </div>
     </div>
@@ -50,6 +51,6 @@
 
     <div class="mt-5">
         <p class="lead">ALL IN ONE PLACE</p>
-        <p>To get started just → <a href="/signup" class="text-white">Sign Up</a> ← and Explore</p>
+        <p>To get started just → <a href="/signup" class="text-#4750FF">Sign Up</a> ← and Explore</p>
     </div>
 </div>
