--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,20 @@
-<div>
-  <div>
-    <h2>Login</h2>
+<div class="login-container">
+  <div class="login-card">
+    <div class="login-left">
+      <img src="/images/playHits_fullLogo.png" alt="PlayHits Logo" class="login-icon">
+    </div>
+    <div class="login-right">
+      <h2 class="login-title">Member Login</h2>
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <input type="email" name="email" placeholder="Email" class="form-input">
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="Password" class="form-input">
+        </div>
+        <button type="submit" class="login-button">LOGIN</button>
+      </form>
+      <a href="/signup" class="signup-link">Dont have an Account? Create One →</a>
+    </div>
   </div>
-  <form id="login-form">
-    <div>
-      <label for="username-input-login">Username</label>
-      <input type="text" id="username-input-login" />
-    </div>
-    <div>
-      <label for="password-input-login">Password</label>
-      <input type="password" id="password-input-login" />
-    </div>
-    <button type="submit" id="login-btn">Login!</button>
-    <a type="button" href="/signup">Sign up instead</a>
-  </form>
 </div>
-
-<script src="/js/login.js"></script>
