--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 /* General Reset */
 body {
   margin: 0;
@@ -133,6 +132,30 @@ form button:hover {
   margin: auto;
 }
 
+/* Playlists, Categories, and Popular Songs */
+.container.mt-4 {
+  margin-top: 40px;
+}
+
+.btn-outline-primary {
+  color: #ffffff;
+  border-color: #4750FF;
+}
+
+.btn-outline-primary:hover {
+  background-color: #4750FF;
+  color: #ffffff;
+}
+
+.list-group-item {
+  background-color: #1f1f1f;
+  color: #ffffff;
+  border: none;
+}
+
+.list-group-item img {
+  border: 2px solid #4750FF;
+}
 
 /* Sign Up Page Styles */
 .signup-container {
