--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -1,10 +1,47 @@
-<div>
-  {{! Reminder: userExamples comes from the data being passed in the res.render on pageOneRoutes.js! }}
-  {{#each userExamples}}
+<!-- views/page-one.handlebars -->
 
-    <h2>{{message}}</h2>
-    <div>This messaage is specific to this user!</div>
+<div class="container mt-4">
+  <!-- Search bar -->
+  <div class="d-flex justify-content-center mb-4">
+    <input type="text" class="form-control w-50" placeholder="Search Music" />
+  </div>
 
-  {{/each}}
+  <!-- Featured Playlists -->
+  <h2>Featured Playlists</h2>
+  <div class="row">
+    {{#each playlists}}
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
+          <div class="card-body">
+            <h5 class="card-title">{{this.name}}</h5>
+            <p class="card-text">{{this.description}}</p>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+
+  <!-- Popular Categories -->
+  <h2>Popular Categories</h2>
+  <div class="d-flex flex-wrap">
+    {{#each categories}}
+      <button class="btn btn-outline-primary m-2">{{this}}</button>
+    {{/each}}
+  </div>
+
+  <!-- Popular Songs -->
+  <h2>Most Popular Songs</h2>
+  <ul class="list-group">
+    {{#each trendingSongs}}
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <img src="{{this.image}}" alt="{{this.title}}" class="rounded" style="width: 50px; height: 50px;">
+        <span>{{this.title}} by {{this.artist}}</span>
+        <span>{{this.genre}}</span>
+        <span>{{this.duration}} mins</span>
+      </li>
+    {{/each}}
+  </ul>
 </div>
+
 <script src="/js/page-one.js"></script>
