Added code for the Songs Page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -39,7 +39,7 @@
                         <i class="fas fa-music"></i> <!-- Replace with appropriate icon -->
                     </div>
                     <h5 class="card-title">1000+ Songs</h5>
-                    <p class="card-content">Access a library of over 1000 songs from 1960s to Now.</p>
+                    <p class="card-content">Access a library of 10000 songs</p>
                 </div>
             </div>
         </div>
