--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,9 +127,7 @@ form button:hover {
 
 /* Main Content Container */
 .container {
-  max-width: 960px;
   padding: 0 20px;
-  margin: auto;
 }
 
 /* Playlists, Categories, and Popular Songs */
@@ -145,6 +143,13 @@ form button:hover {
 .btn-outline-primary:hover {
   background-color: #4750FF;
   color: #ffffff;
+}
+
+.btn 
+{
+  background-color: #4750FF;
+  color: white;
+  border: none;
 }
 
 .list-group-item {
@@ -343,4 +348,40 @@ form button:hover {
 .forgot-password:hover,
 .signup-link:hover {
   color: #858bff; 
+}
+
+.container-fluid {
+  padding-top: 20px;
+}
+
+.search-bar input {
+  width: 100%;
+}
+
+.song-list .song-item {
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.song-details img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.song-details {
+  padding: 20px;
+}
+
+.add-to-playlist {
+  background-color: #4750FF;
+  color: white;
+}
+
+.add-to-playlist:hover {
+  background-color: #333;
+}
+
+.border-left {
+  border-left: 2px solid #4750FF;
 }
