--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -1,47 +1,47 @@
-<!-- views/page-one.handlebars -->
-
-<div class="container mt-4">
-  <!-- Search bar -->
-  <div class="d-flex justify-content-center mb-4">
-    <input type="text" class="form-control w-50" placeholder="Search Music" />
-  </div>
-
-  <!-- Featured Playlists -->
-  <h2>Featured Playlists</h2>
-  <div class="row">
-    {{#each playlists}}
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
-          <div class="card-body">
-            <h5 class="card-title">{{this.name}}</h5>
-            <p class="card-text">{{this.description}}</p>
-          </div>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Left Column: Your Playlists -->
+        <div class="col-md-3 bg-dark text-white p-4" id="playlist-column">
+            <h3>Your Playlists</h3>
+            {{#if playlists.length}}
+                <ul class="list-group">
+                    {{#each playlists}}
+                        <li class="list-group-item bg-dark text-white" data-playlist-id="{{this.id}}">
+                            {{this.name}}
+                        </li>
+                    {{/each}}
+                </ul>
+            {{else}}
+                <p>Whoops, looks like you don't have any playlists yet.</p>
+            {{/if}}
         </div>
-      </div>
-    {{/each}}
-  </div>
 
-  <!-- Popular Categories -->
-  <h2>Popular Categories</h2>
-  <div class="d-flex flex-wrap">
-    {{#each categories}}
-      <button class="btn btn-outline-primary m-2">{{this}}</button>
-    {{/each}}
-  </div>
+        <!-- Center Column: All Songs -->
+        <div class="col-md-6 p-4" id="songs-column">
+            <div class="search-bar">
+                <input type="text" class="form-control" id="song-search" placeholder="Search for a song...">
+            </div>
+            <button class="btn" id="search-button">Search</button>
+            <div id="song-list">
+                {{#each popularSongs}}
+                    <div class="song-item row">
+                        <div class="col-9">
+                            <h5>{{this.title}} - {{this.artist}}</h5>
+                            <p>{{this.album}} | Released: {{this.dateReleased}} | Duration: {{this.duration}} mins</p>
+                        </div>
+                        <div class="col-3 text-end">
+                            <button class="btn btn-outline-light add-to-playlist-btn" data-song-id="{{this.id}}">
+                                <i class="fas fa-plus"></i> Add to Playlist
+                            </button>
+                        </div>
+                    </div>
+                {{/each}}
+            </div>
+        </div>
 
-  <!-- Popular Songs -->
-  <h2>Most Popular Songs</h2>
-  <ul class="list-group">
-    {{#each trendingSongs}}
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <img src="{{this.image}}" alt="{{this.title}}" class="rounded" style="width: 50px; height: 50px;">
-        <span>{{this.title}} by {{this.artist}}</span>
-        <span>{{this.genre}}</span>
-        <span>{{this.duration}} mins</span>
-      </li>
-    {{/each}}
-  </ul>
+        <!-- Right Column: Song Details -->
+        <div class="col-md-3 bg-dark text-white p-4" id="song-details-column">
+            <!-- Details will be dynamically loaded here -->
+        </div>
+    </div>
 </div>
-
-<script src="/js/page-one.js"></script>
