--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,15 +5,18 @@
     </div>
     <div class="signup-right">
       <h2 class="signup-title">Create an Account</h2>
-      <form action="/signup" method="POST">
+      <form id="signup-form" action="/signup" method="POST">
         <div class="form-group">
-          <input type="text" name="username" placeholder="Username" class="form-input">
+          <input type="text" id="username-input-signup" name="username" placeholder="Username" class="form-input" required>
+          <div id="username-feedback" class="feedback-message"></div>
         </div>
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" class="form-input">
+          <input type="email" id="email-input-signup" name="email" placeholder="Email" class="form-input" required>
+          <!-- Add feedback for email validation if needed -->
         </div>
         <div class="form-group">
-          <input type="password" name="password" placeholder="Password" class="form-input">
+          <input type="password" id="password-input-signup" name="password" placeholder="Password" class="form-input" required>
+          <div id="password-feedback" class="feedback-message"></div>
         </div>
         <button type="submit" class="signup-button">SIGN UP</button>
       </form>
@@ -21,3 +24,7 @@
     </div>
   </div>
 </div>
+
+<script src="/js/signup.js"></script>
+
+
