fixed signin, login, logout bugs

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -48,7 +48,7 @@
 
     <!-- New "View All Music" Button -->
     <div class="mt-5 text-center">
-        <a href="/page-one" class="btn btn-lg btn-primary text-white">View All Music</a>
+        <a href="/pageOne" class="btn btn-lg btn-primary text-white">View All Music</a>
     </div>
 
     <div class="mt-5">
