modified search event listener

--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -22,7 +22,7 @@
 
         <!-- Center Column: All Songs -->
         <div class="col-md-6 p-4" id="songs-column">
-            <form class="search-form" action="/pageOne/search" method="GET">
+            <form class="search-form">
                 <input type="text" class="form-control" name="q" id="song-search" placeholder="Search for a song...">
                 <button class="btn" id="search-button">Search</button>
             </form>
