--- a/views/aboutUs.handlebars
+++ b/views/aboutUs.handlebars
@@ -1,40 +1,5 @@
-<html lang="en">
+<link rel="stylesheet" href="/css/about.css">
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PlayHits</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/style.css" />
-  <style>
-    .video-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height:
-        100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    main {
-      position: relative;
-      z-index: 1;
-    }
-
-    nav {
-      position: relative;
-      z-index: 10;
-    }
-  </style>
-</head>
-
-<body>
 
   <div>
     <video class="video-background" autoplay loop muted style="width: 100%; height: auto; max-height: 100vh;">
@@ -43,7 +8,7 @@
     </video>
   </div>
 
-  <div class="d-flex flex-wrap">
+  <div id="container-align" class="d-flex flex-wrap">
 
     <main class="container mt-5">
       <div class="row">
@@ -51,8 +16,8 @@
           <div class="signup-container" style="margin-top: 110px;">
             <div class="signup-card">
               <img src="/images/playhitsLogo.png" alt="PlayHits Logo"
-                style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); max-width: 100px; height: auto; border-radius: 55px; z-index: 1;" />
-              <div style="border-radius: 8px; padding: 20px; margin: 30px; max-width: 600px;">
+                style="position: absolute; top: 4%; left: 50%; transform: translateX(-50%); max-width: 100px; height: auto; border-radius: 55px; z-index: 1;" />
+              <div id="box-container" >
                 <p
                   style="line-height: 1.6; color: #e0e0e0; font-size: 20px; font-family: Arial, sans-serif; text-align: justify; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);">
                   Welcome to
@@ -117,28 +82,18 @@
     </main>
   </div>
 
-  {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  {{! }}
-
   <script>
     async function loadMusicData() {
       try {
         const response = await
-          fetch('seeds/musicData.json'); const musicData = await response.json();
+          fetch('seeds/musicData.json'); 
+          const musicData = await response.json();
         const randomIndex = Math.floor(Math.random() * musicData.length); const
           track = musicData[randomIndex];
       } catch (error) {
         console.error('Error 
-      loading music data: ', error); } } window.onload = loadMusicData;
-        )}
+      loading music data: ', error); } } window.onload = loadMusicData'
+        )
+      }
     }
   </script>
-
-  {{! }}
-</body>
-
-</html>
