fixed search function

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,7 @@
     </footer>
 
     {{#if loggedIn}}
+    <script src="/js/page-one.js"></script>
     <script src="/js/logout.js"></script>
     {{/if}}
     <!-- Bootstrap JS -->
